# game_ocr_script

./: .gitignore  README.md  cleanup.py  click_script.py  dxcam.py  getwindow.py  logging_config.json  pyproject.toml  requirements.txt  setup.py  test.py  test_env.py  test_ocr.py  utils.py  view_screenshot_cv.py
gas/: __init__.py  cli.py  logger.py  logging_config.json  ocr_engine.py  relative_recorder.py  settings.py
gas/cons/: __init__.py  key_code.py
gas/interfaces/: interfaces.py
gas/providers/: adb_provider.py  win_provider.py
gas/recorder/: __init__.py  operation_player.py  operation_recorder.py
gas/simple_logger/: __init__.py  core.py  handlers.py
gas/util/: __init__.py  calculate_time_util.py  dxcam_util.py  file_util.py  hwnd_util.py  img_util.py  keymouse_util.py  mss_util.py  onnx_util.py  paddleocr_util.py  screenshot_util.py  windows_util.py  wrap_util.py
gas/utils/: __init__.py  image_util.py  keymouse_util.py
ocr_tool/: __init__.py  cli.py  image_processor.py  interfaces.py  key_code.py  logger.py  ocr_engine.py  utils.py  window_manager.py
ocr_tool/providers/: adb_provider.py  direct_provider.py  win_provider.py
src/: __init__.py  cli.py  logger.py  ocr_engine.py  utils.py  window_manager.py
tests/recorder/: test.json  test_operation_player.py
tests/util/: test_onnx_util.py
