[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gas"
version = "1.0.0"
description = "基于PaddleOCR的游戏自动化工具"
authors = [{ name = "Jian", email = "your.email@example.com" }]
readme = "README.md"
license = { text = "MIT" }
keywords = ["ocr", "automation", "paddleocr", "game"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    # "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"

dependencies = [
    "dxcam>=0.0.5",
    "opencv_contrib_python>=4.10.0.84",
    "opencv_python>=4.12.0.88",
    "paddleocr>=3.3.1",
    "psutil>=7.1.3",
    "pyautogui>=0.9.54",
    "PyDirectInput>=1.0.4",
    "pygetwindow>=0.0.9",
    "pynput>=1.8.1",
    "numpy<2.3.0,>=1.21.0",
    "pywin32>=311",
    "setuptools>=80.9.0",
    "paddlepaddle==3.2.0",
    "matplotlib>=3.9.4",
    "mss>=10.1.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = ["black>=23.0.0", "ruff>=0.0.292", "pytest>=7.0.0", "pre-commit>=3.0.0"]

[project.scripts]
gas = "gas.cli:main"

[project.urls]
Homepage = "https://github.com/1821454893q/gas"
Repository = "https://github.com/1821454893q/gas"
"Bug Reports" = "https://github.com/1821454893q/gas/issues"

[tool.setuptools.packages.find]
where = ["."] # 在当前目录查找包

[tool.black]
line-length = 100
target-version = ['py39']
